# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tests.py  validate_submission.py
server/: __init__.py  app.py
